--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,27 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+}
+
+.danger {
+  --primary: #d81b60;
+  --primary-hover: #e91e63;
+  --primary-focus: rgba(216, 27, 96, 0.25);
+}
+
+.warning {
+  --primary: #ff9800;
+  --primary-hover: #ffa726;
+  --primary-focus: rgba(255, 152, 0, 0.25);
+}
+
+.success {
+  --primary: #4caf50;
+  --primary-hover: #66bb6a;
+  --primary-focus: rgba(76, 175, 80, 0.25);
+}
